test/testdata/variables/undeclared_access_error_function_local.lox
fun f() {
  print a; // error: a has not been declared
}

f();
